Add fields for pressure and visibility
